--- a/Firebase_practica/index.html
+++ b/Firebase_practica/index.html
@@ -6,7 +6,7 @@
     <body>
         <div class="box">
             <div class="form">
-                <h2>Register</h2>
+                <h2>Regístrate</h2>
                 <form>
                     <div class="inputbox">
                         <input type="text" value="" id="username" required>
@@ -20,7 +20,7 @@
                         <input type="text" value="" id="account" required>
                         <span>Acount</span>
                     </div>
-                    <input type="submit" value="Insertar Datos" class="sub" id="submit">
+                    <button type="submit" class="sub" id="submit">Registrarse
                 </form>
             </div>
         </div>
